# MBZIRC-Drone-Vision

./: .gitignore  .gitmodules  README.md
.catkin_tools/profiles/: profiles.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
.catkin_tools/profiles/no_stereo/: config.yaml  devel_collisions.txt
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros_msgs/: CMakeLists.txt  package.xml
src/distance_finder/: CMakeLists.txt  package.xml
src/distance_finder/action/: GetDistance.action
src/distance_finder/config/: cameras.yaml  ros.yaml  targets.yaml
src/distance_finder/launch/: distance_finder.launch
src/distance_finder/msg/: ObjPos.msg  ObjPosVec.msg  ObjectBox.msg  ObjectBoxes.msg  TargetPos.msg  TargetPosVec.msg
src/distance_finder/src/: DistanceFinder.cpp  distance_finder_ros_node.cpp
src/imageshow/: CMakeLists.txt
src/imageshow/launch/: imageshow.launch
src/imageshow/src/: ros_image_show.cpp
src/mbzirc_detection_launcher/: CMakeLists.txt  package.xml  start_all.launch  start_cameras.launch  start_display.launch  start_streaming.launch
src/mbzirc_detector/: CMakeLists.txt  package.xml
src/mbzirc_detector/config/: cameras.yaml  color_detector.yaml  detection.yaml  ros.yaml
src/mbzirc_detector/include/: BBox.hpp
src/mbzirc_detector/include/color_detector/: ColorDetector.hpp  cv_algorithms.hpp
src/mbzirc_detector/include/mbzirc_detector/: MbzircDetector.hpp
src/mbzirc_detector/include/object_memory/: ObjectMemory.hpp
src/mbzirc_detector/launch/: detector.launch
src/mbzirc_detector/src/: ColorDetector.cpp  MbzircDetector.cpp  ObjectMemory.cpp  cv_algorithms.cpp  mbzirc_detector_ros_node.cpp
src/mbzirc_detector/tools/: calibrate_HLS_thresholds.py  calibrate_HSV_thresholds.py  calibrate_LAB_thresholds.py
src/state_estimator/: CMakeLists.txt  package.xml
src/state_estimator/src/: StateEstimator.cpp  state_estimator_ros_node.cpp
(+16 files in other folders)
